--- a/set1/css/main.css
+++ b/set1/css/main.css
@@ -65,7 +65,8 @@ h4, h5, h6 {
 }
 
 span.color {
-	color: #0feb9e;
+	color: #0feb9e; 
+  /*#0066cc;*/
 }
 
 body > section,
@@ -215,6 +216,7 @@ body > section,
 .carousel-caption p:before,
 .carousel-caption p:after {
 color: #0feb9e;
+/*#0066cc;*/
 content: "___";
 position: relative;
 top: -8px;
@@ -373,6 +375,7 @@ top: -8px;
 
 .overlay {
 	background-color: rgba(14,180,147,.9);
+  /*rgba(0, 102, 204, .7);*/
 	text-align: center;
 	position: absolute;
 	left: 0;
